--- a/ticketing.html
+++ b/ticketing.html
@@ -38,13 +38,13 @@
             <cin-section egnee = "2" row="6" column="6"></cin-section>
             <cin-section egnee = "3" row="6" column="4"></cin-section>
         </div>
-    </div>
+        </div>
     </div> 
     <div id="food_and_drinks">
         <one-product img="Images/icecream1.png" title="Зайрмаг" price="2,000"></one-product>
         <one-product img="img_mandah/eat & drink/chips.png" title="Чипс" price="4,000"></one-product>
         <one-product img="Images/americano.png" title="Американо" price="6,000"></one-product>
-        <one-product img="iImages/popcorn.png" title="Попкорн" price="5,000"></one-product>
+        <one-product img="Images/popcorn.png" title="Попкорн" price="5,000"></one-product>
         <one-product img="Images/cola.png" title="Кока Кола" price="3,000"></one-product>
     </div>
     <aside>
