header css - iig salgaw

--- a/js_now.html
+++ b/js_now.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Одоо гарч буй кинонууд, дэлгэцнээ гарч буй кино, кино үзэх">
         <link rel="stylesheet" href="css/nowplaying.css">
         <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/header.css">
     </head>
     <body>
         <header>
