--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
             <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
             <link rel="stylesheet" href="css/login.css">
             <link rel="stylesheet" href="css/style.css">
+            <link rel="stylesheet" href="css/header.css">
             <title>Нэвтрэх</title>
         </head>
         <body>
