--- a/movie.html
+++ b/movie.html
@@ -8,6 +8,7 @@
     <meta name="description" content="PrimeCineplex кино театрын киноны нэр, poster, trailer, үзэх насны ангилал, үргэлжлэх хугацаа, төрөл, дэлгэцээс буух огноо, товч үйл явдал, гарах салбар, өдөр, цаг, imdb оноо, rotten tomatoes оноо, үзэгчдийн оноо, зохиолч, жүжигчдийн зураг, текстэн мэдээлэл, үзэгчдийн бичсэн сэтгэгдэл, оноо, үзэгчийн зураг, нэр, сэтгэгдэл бичих хэсэгтэй хуудас юм.">
     <link rel="stylesheet" href="css/movie.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
     <title>PrimeCineplexMongolia</title>
 </head>
 <body>
