--- a/nowplaying.html
+++ b/nowplaying.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Одоо гарч буй кинонууд, дэлгэцнээ гарч буй кино, кино үзэх">
     <link rel="stylesheet" href="css/nowplaying.css">
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/header.css">
     <script type="module" src="json2.js" defer></script>
 </head>
 <body>
