--- a/ticketing.html
+++ b/ticketing.html
@@ -7,6 +7,7 @@
     <script type="module" src="suudal/cin-section.js"></script>
     <link rel="stylesheet" href="css/ticketing.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
     <title>Ticketing</title>
     <style>
         .suudl {display: flex; justify-content: center; gap: 2rem;}
