--- a/nowplaying.html
+++ b/nowplaying.html
@@ -27,9 +27,9 @@
             <a href="index.html"><img src="Images/logo.jpg" id="logo" alt="primeLogo"></a>
             <ul id="menu">
                 <li><a href="js_now.html">КИНО</a></li>
-                <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
-                <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
-                <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
+                <li><a >ЗӨВХӨН МАНАЙД</a></li>
+                <li><a >ҮЙЛЧИЛГЭЭ</a></li>
+                <li><a >БИДНИЙ ТУХАЙ</a></li>
                 <li><a id="login" href="login.html">НЭВТРЭХ</a></li>
             </ul>
         </nav>
