login, create css duussan

--- a/create.html
+++ b/create.html
@@ -92,6 +92,7 @@
             <section>
                 <input type="checkbox" id="accept_button">
                 <label id="accept_text" for="accept_button">Би Prime Cineplex-ээс имэйл хүлээн авахыг зөвшөөрч байна.</label>
+                <li class="tseg"></li>
                 <button type="button">Бүртгэл үүсгэх</button>
             </section>
             
