--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
                         <li><a href="js_now.html">КИНО</a></li>
                         <li><a >ЗӨВХӨН МАНАЙД</a></li>
                         <li><a >ҮЙЛЧИЛГЭЭ</a></li>
+                        <li><a >БИДНИЙ ТУХАЙ</a></li>
                         <li><a id="login" href="login.html">НЭВТРЭХ</a></li>
                     </ul>
                 </nav>
@@ -42,6 +43,7 @@
                         <li class="input"><input type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
                         <li class="input"><input type="text" placeholder="Нууц үг"></li>
                         <li><button type="button">Нэвтрэх</button></li>
+                        
                         <li><a href="create.html">Бүртгүүлэх</a></li>
                     </ul>
                     <p>Нууц үгээ мартсан уу?</p>
