--- a/js_now.html
+++ b/js_now.html
@@ -212,8 +212,8 @@
             Render() {
                 return `
                 <article>
-                    <a href="movie.html?id=${this.id}" class="movie_poster">
-                        <img src="${this.img}" alt="${this.name} poster">${this.name}
+                    <a href="movie.html" id=${this.id}" class="movie_poster">
+                        <img src="${this.img}" alt="${this.name} poster" >${this.name}
                     </a>
                     <div class="rating">
                         <a href="https://www.imdb.com/title/${this.id}/">
