--- a/ticketing.html
+++ b/ticketing.html
@@ -63,7 +63,7 @@
             </div>
         </article>
         <div class="line"></div>
-        <label for="chair">Таны суудал: F11 • F12 • F13</label>
+        <label for="chair">Таны суудал <span class="select_chair_number"></span></label>
         <div class="line"></div>
         <ul>
             <li>
