--- a/ticketing.html
+++ b/ticketing.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Төлбөр баталгаажуулах, тасалбар захиалах"> 
     <script type="module" src="suudal/cin-section.js"></script>
-    <script type="module" src="webcomp/ticket-type.js"></script>
-    <script type="module" src="webcomp/total-sum.js"></script>
+    <script type="module" src="components/ticket-type.js"></script>
     <link rel="stylesheet" href="css/ticketing.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
