--- a/template_test.html
+++ b/template_test.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Star Rating Custom Element</title>
-    </head>
-    <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>yahu2</title>
+</head>
+<body>
 
-        <template id="input_header">
-            <form>
-                    <section>
-                        <slot name="title"><h1>Гарчиг</h1></slot>
-                        <slot name="more"><p>Тайлбар</p></slot>
-                    </section>
-            </form>
-        </template>
+<template id="seat">
+  <form>
+    <label>
+      <slot name="suudal"><img class="image1" src="img_ts/red.png" alt="Picture 1"></slot>
+      <slot name="newSlot"></slot> <!-- Add a new slot named "newSlot" -->
+    </label>
+  </form>
+</template>
 
-        <i_h>
-            <h1 slot="title">Нэвтрэх нэр</h1>
-            <p slot="more">Бүх талбарыг бөглөнө үү!</p>
-        </i_h>
-        <i_h>
-            <h1 slot="title">Хувийн мэдээлэл</h1>
-            <p slot="more">Бүх талбарыг бөглөнө үү!</p>
-        </i_h>
-        <i_h>
-            <h1 slot="title">Нууц үг</h1>
-            <p slot="more">Бүртгэлээ үүсгэх сүүлийн алхам. Хамгийн багадаа 8 тэмдэгт. Хамгийн багадаа: 1 том үсэг, 1 тоо агуулсан байх ёстой.</p>
-        </i_h>
+<suudal>
+  <img width="50" height="50" class="image1" slot="suudal" src="img_ts/red.png">
+  <!-- Add content for the new slot -->
+  <span slot="newSlot">B</span>
+</suudal>
+<suudal>
+  <img width="50" height="50" class="image2"  slot="suudal" src="img_ts/blue.png">
+  <span slot="newSlot">B</span>
+</suudal>
+<suudal>
+  <img width="50" height="50" class="image3"  slot="suudal" src="img_ts/yellow.png">
+  <!-- No content for the new slot in this suudal -->
+</suudal>
+<suudal>
+  <!-- No content for the existing suudal slot and the new slot -->
+</suudal>
 
-        <script>
-        customElements.define('i_h', class extends HTMLElement {
-            constructor() {
-            super();
-            const starRating = document.getElementById('input_header').content;
-            const shadowRoot = this.attachShadow({ mode: 'open' });
-            shadowRoot.appendChild(starRating.cloneNode(true));
-            }
-        });
-        </script>
-    </body>
+<script>
+  customElements.define('suudal', class extends HTMLElement {
+    constructor() {
+      super();
+      const seatTemplate = document.getElementById('seat').content;
+      const shadowRoot = this.attachShadow({ mode: 'closed' });
+      shadowRoot.appendChild(seatTemplate.cloneNode(true));
+
+      // Access the content of the new slot
+      const newSlotContent = shadowRoot.querySelector('slot[name="newSlot"]').assignedNodes();
+      console.log('New Slot Content:', newSlotContent);
+    }
+  });
+</script>
+
+</body>
 </html>
