--- a/login.html
+++ b/login.html
@@ -35,20 +35,22 @@
                                 alert("Нэвтрэх нэр, нууц үг буруу байна.");
                                 return;}
     
-                        result.json().then(loginResponse => document.getElementById("username").innerHTML = loginResponse.username+'<button onclick="logout();">LOGOUT</button>');
+                        result.json().then(loginResponse => document.getElementById("username").innerHTML = loginResponse.username+'<p><button onclick="logout();">Гарах</button></p>');
                     });
             }
             function logout(){
+                const email = document.getElementById("email").value;
+                const password = document.getElementById("password").value;
                 fetch("http://localhost:3000/logout",
                 {
-                    method: 'POST',
+                    method: 'GET',
                     cache: "no-cache",   
                 })
                 .then(result => {
                     if(result.status != 200){
                         alert("Гаралт амжилтгүй боллоо.")
                     }
-                    result.sendFile("./login.html", options);
+                    alert("Гаралт амжилттай боллоо.")
                 })
             }
         </script>
