--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
             async function login() {
                 const email = document.getElementById("email").value;
                 const password = document.getElementById("password").value;
-    
+
                 fetch("http://localhost:3000/login",
                     {
                         method: 'POST',
@@ -34,23 +34,21 @@
                             {   
                                 alert("Нэвтрэх нэр, нууц үг буруу байна.");
                                 return;}
-    
-                        result.json().then(loginResponse => document.getElementById("username").innerHTML = loginResponse.username+'<p><button onclick="logout();">Гарах</button></p>');
+
+                        result.json().then(loginResponse => document.getElementById("username").innerHTML = loginResponse.username+'<button onclick="logout();">LOGOUT</button>');
                     });
             }
             function logout(){
-                const email = document.getElementById("email").value;
-                const password = document.getElementById("password").value;
                 fetch("http://localhost:3000/logout",
                 {
-                    method: 'GET',
+                    method: 'POST',
                     cache: "no-cache",   
                 })
                 .then(result => {
                     if(result.status != 200){
                         alert("Гаралт амжилтгүй боллоо.")
                     }
-                    alert("Гаралт амжилттай боллоо.")
+                    result.sendFile("./login.html", options);
                 })
             }
         </script>
