--- a/create.html
+++ b/create.html
@@ -10,6 +10,30 @@
         <link rel="stylesheet" href="css/header.css">
         <title>Бүртгүүлэх</title>
     </head>
+    <script>
+            async function register() {
+                const email = document.getElementById("email_req").value;
+                const fullname = document.getElementById("firstname").value;
+                const password = document.getElementById("pass").value;
+                fetch("http://localhost:3000/registeruser", {
+                    method: 'POST',
+                    cache: "no-cache",
+                    headers: {
+                        "Content-Type": 'application/json; charset=UTF-8'
+                    },
+                    body: JSON.stringify({ email, fullname, password })
+                })
+                .then(result => {
+                    if (result.status !== 200) {
+                        alert("Status 200s uur");
+                        return;
+                    }
+                result.json().then(registerResponse => alert(registerResponse.username));
+                });
+                
+
+            }
+    </script>
     <body>
         <header>
             <nav>
@@ -107,7 +131,7 @@
                 <input type="checkbox" id="accept_button">
                 <label id="accept_text" for="accept_button">Би Prime Cineplex-ээс имэйл хүлээн авахыг зөвшөөрч байна.</label>
                 <li class="tseg"></li>
-                <button type="button">Бүртгэл үүсгэх</button>
+                <button type="button" onclick="register();">Бүртгэл үүсгэх</button>
             </section>
             
         </main>
