--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                                 alert("Нэвтрэх нэр, нууц үг буруу байна.");
                                 return;}
 
-                        result.json().then(loginResponse => document.getElementById("username").innerHTML = loginResponse.username+'<button onclick="logout();">LOGOUT</button>');
+                        result.json().then(loginResponse => document.getElementById("username").innerHTML = loginResponse.username);
                     });
             }
         </script>
@@ -73,7 +73,7 @@
                         <li class="input"><input id="password" type="text"  id="btn_login" placeholder="Нууц үг"></li>
                         <li><button type="button" onclick="login();">Нэвтрэх</button></li>
                         <h2>Welcome, <span id="username">Guest</span></h2>
-                        <a href="./emails" >Check email</a>
+                        <a href="./users" >Get Users</a>
                         
                         <li><a href="./register">Бүртгүүлэх</a></li>
                     </ul>
