public bolgon tsegtslev

--- a/login.html
+++ b/login.html
@@ -52,9 +52,9 @@
                     </address>
                 </nav>
                 <nav>
-                    <a href="index.html"><img src="Images/logo.jpg" id="logo" alt="primeLogo"></a>
+                    <a href="./index.html"><img src="Images/logo.jpg" id="logo" alt="primeLogo"></a>
                     <ul id="menu">
-                        <li><a href="js_now.html">КИНО</a></li>
+                        <li><a href="./js_now.html">КИНО</a></li>
                         <li><a >ЗӨВХӨН МАНАЙД</a></li>
                         <li><a >ҮЙЛЧИЛГЭЭ</a></li>
                         <li><a >БИДНИЙ ТУХАЙ</a></li>
