--- a/ticketing.html
+++ b/ticketing.html
@@ -155,6 +155,10 @@
     
     <script>
         setTimeout(() => {
+            const cartContainer = document.querySelector("cart-container");
+            if (cartContainer) {
+                cartContainer.clearLocalStorage();
+            }
             window.location.href = 'index.html';
         }, 3 * 60 * 1000);
     </script>
