--- a/movie.html
+++ b/movie.html
@@ -36,20 +36,7 @@
     </header>
     <main>
         <div>
-            <div>
-                <img src="Images/nowplaying_poster1.png" alt="Poster1" name="poster1" height="100px">
-                <div>
-                    <img src="Images/imdb_icon.png" alt="IMDB Logo" height="50" width="50">
-                    <img src="Images/rotten_tomatos_icon.png" alt="ROTTEN TOMATOES logo" width="50" height="50">
-                    <img src="Images/nowplaying_poster1.png" alt="Poster1" height="50">
-                </div>
-                <div>
-                    <h5>10/10</h5>
-                    <h5>100%</h5>
-                    <h5>5/5</h5>
-                </div>
-                
-            </div>
+            <a href="https://www.youtube.com/watch?v=5pTcio2hTSw"><img src="Images/nowplaying_poster1.png" alt="Poster1" name="poster1"></a>
             <nav>
                 <h2>SUZUME</h2>
                 <h4>PG   •   2 цаг 2 минут   •    Адал явдал, Драм, Уран зөгнөлт   •    2023.11.06</h4>
