button link holboson

--- a/index.html
+++ b/index.html
@@ -60,12 +60,19 @@
                 <li><img src="Images/bigposter3.png" id="bigposter3" alt="The NUN poster"></li>
             </ul>
             <div class="button">
-                <button>ТРЭЙЛЕР
-                    <img src="Images/header_yt_icon.png" alt="yt icon">
+                <button>
+                    <a href="https://www.youtube.com/watch?v=5pTcio2hTSw">
+                        ТРЭЙЛЕР
+                        <img src="Images/header_yt_icon.png" alt="yt icon">    
+                    </a>
                 </button>
-                <button id="buy_button">ЗАХИАЛАХ
-                    <img src="Images/ticket_icon.png" alt="ticket icon">    
+                <button id="buy_button">
+                    <a href="ticketing.html">
+                        ЗАХИАЛАХ
+                        <img src="Images/ticket_icon.png" alt="ticket icon">    
+                    </a>
                 </button>
+                
             </div>
         </div>
         <section>
