--- a/ticketing.html
+++ b/ticketing.html
@@ -58,22 +58,22 @@
         <div class="line"></div>
         <article class="movie_details">
             <img src="Images/nowplaying_poster1.png" alt="poster">
-            <div id="movie_info">
-                <label for="movie_name">SUZUME</label>
-                <label for="info_movie">PG • 2 цаг 2 минут • 2023.11.06</label>
-                <label for="location">Салбар: Зайсан</label>
-                <label for="hall">Танхим: 3</label>
-                <label for="date">Он, сар, өдөр: 2023.11.17</label>
-                <label for="time">Хугацаа: 2:47 PM</label>
-            </div>
+            <article id="movie_info">
+                <h2 for="movie_name">SUZUME</h2l>
+                <p for="info_movie">PG • 2 цаг 2 минут • 2023.11.06</p>
+                <p for="location">Салбар: Зайсан</p>
+                <p for="hall">Танхим: 3</p>
+                <p for="date">Он, сар, өдөр: 2023.11.17</p>
+                <p for="time">Хугацаа: 2:47 PM</p>
+            </article>
         </article>
         <div class="line"></div>
         <label for="chair">Таны суудал <span class="select_chair_number"></span></label>
         <div class="line"></div>
-        <ul id="ticket_type">
+        <div id="ticket_type">
             <ticket-type type="Том хүн" cost="15000"></ticket-type>
             <ticket-type type="Хүүхэд" cost="10000"></ticket-type>
-        </ul>
+        </div>
         <div class="line"></div>
         <cart-container></cart-container>
         <div class="line"></div>
