--- a/ticketing.html
+++ b/ticketing.html
@@ -68,7 +68,7 @@
             </article>
         </article>
         <div class="line"></div>
-        <label for="chair">Таны суудал <span class="select_chair_number"></span></label>
+        <p for="chair">Таны суудал <span class="select_chair_number"></span></label>
         <div class="line"></div>
         <div id="ticket_type">
             <ticket-type type="Том хүн" cost="15000"></ticket-type>
