--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
                         <li class="input"><input id="email" type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
                         <li class="input"><input id="password" type="text"  id="btn_login" placeholder="Нууц үг"></li>
                         <li><button type="button" onclick="login();">Нэвтрэх</button></li>
-                        <h2>Welcome, <span id="username">Guest</span></h2>
+                        <li><h2>Welcome, <span id="username">Guest</span></h2></li>
                         <li><a href="./register">Бүртгүүлэх</a></li>
                     </ul>
                 </article>
